--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <title>Omar Alshehri | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
+
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+  html { scroll-behavior: smooth; }
+    </style>
 </head>
 <body>
 
