--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 
 
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-  html { scroll-behavior: smooth; }
-    </style>
+    
 </head>
 <body>
 
@@ -55,13 +53,13 @@
 
         <form>
             <label>Name:</label>
-            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Your Name" required>
 
             <label>Email:</label>
-            <input type="email" placeholder="Your Email">
+            <input type="email" placeholder="Your Email" required>
 
             <label>Message:</label>
-            <textarea placeholder="Your Message"></textarea>
+            <textarea placeholder="Your Message" required></textarea>
 
             <button type="submit">Send</button>
         </form>
