make some improve

--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <title>Omar Alshehri | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <link rel="stylesheet" href="css/styles.css">
-    
 </head>
 <body>
 
-    <!-- Navigation -->
+    <!-- navigation -->
     <nav>
         <h2>Omar Alshehri</h2>
         <ul>
@@ -21,33 +19,53 @@
         </ul>
     </nav>
 
-    <!-- About Section -->
+    <!-- about -->
     <section id="about">
         <h1>About Me</h1>
         <p>
-            Hello! I am Omar Alshehri, a software engineering student passionate about web development and AI.
+            Software Engineering student at King Fahd University of Petroleum & Minerals (KFUPM)
+            with an interest in web design and front-end development.
         </p>
         <p>
-            I enjoy building responsive web applications and continuously learning new technologies.
+            I work on personal web design and development projects, building clean and responsive websites
+            using HTML, CSS, and WordPress as a content management platform.
         </p>
     </section>
 
-    <!-- Projects Section -->
+    <!-- projects -->
     <section id="projects">
         <h1>Projects</h1>
 
-        <div class="project-card">
-            <h3>Project One</h3>
-            <p>A responsive web application built using HTML, CSS, and JavaScript.</p>
-        </div>
+        <!-- ✅ NEW: projects container -->
+        <div class="projects-container">
 
-        <div class="project-card">
-            <h3>Project Two</h3>
-            <p>A simple JavaScript-based tool demonstrating DOM manipulation.</p>
+            <div class="project-card">
+                <h3>Velonweb – Web Design & Development</h3>
+                <p>
+                    Personal web design and development project focused on building clean, responsive WordPress websites
+                    for startups and small businesses.
+                </p>
+                <a href="https://velonweb.com/en/" target="_blank" rel="noopener noreferrer">
+                    <button type="button">Visit Website</button>
+                </a>
+            </div>
+
+            <div class="project-card">
+                <h3>Shumos Care Physical Therapy Center </h3>
+                <p>
+                    Designed and developed the official website for a physical therapy center in Taif,
+                    focused on clear service presentation, user-friendly structure, and responsive design.
+                    
+                </p>
+                <a href="https://shumca.com/en/" target="_blank" rel="noopener noreferrer">
+                    <button type="button">Visit Website</button>
+                </a>
+            </div>
+
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- contact -->
     <section id="contact">
         <h1>Contact Me</h1>
 
@@ -65,8 +83,6 @@
         </form>
     </section>
 
-    <!-- JavaScript -->
     <script src="js/script.js"></script>
-
 </body>
 </html>
